# render-bench

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: EngineConfig.cpp.D064D9C148FF825A.idx  EngineConfig.h.F8A7DB07FA91EBCF.idx  OpenGLerrorreporting.cpp.B00965A9F816E9A0.idx  filemanager.cpp.B1B2B78359BD2B07.idx  filemanager.h.601FB61EDB318C99.idx  glad.c.3B16E9BC90E5BEB1.idx  glad.h.7C184BA1818E3383.idx  imconfig.h.37F288A14E4EE54C.idx  imgui.cpp.C50F6FA50831C1DA.idx  imgui.h.73F8BCEC4A6CF854.idx  imguiThemes.h.186FC11139CA076C.idx  imgui_demo.cpp.960B60B59B7CE158.idx  imgui_draw.cpp.56784F14F22D46CD.idx  imgui_impl_glfw.cpp.8ACD6200745AA0CE.idx  imgui_impl_glfw.h.90FA4724702184BA.idx  imgui_impl_opengl3.cpp.C1254B65E8CDF4EE.idx  imgui_impl_opengl3.h.1FAA1BFA9E9F2810.idx  imgui_internal.h.F21510116FBBAA3D.idx  imgui_tables.cpp.039D883D8C5F3B36.idx  imgui_widgets.cpp.87296514CCAF9704.idx  imstb_rectpack.h.071BFFF4D38378DF.idx  imstb_textedit.h.FBDDEF2B8FE124D7.idx  imstb_truetype.h.0D5AA075C7F9518E.idx  khrplatform.h.C8681A14D840EFA8.idx  main.cpp.D6691A05486B83F6.idx  openglErrorReporting.h.B2CCB5ED78F790A1.idx
assets/Shaders/: basiccube.fs
include/core/: Camera.h  Cube.h  Material.h  Shader.h
include/renderers/: BatchRenderer.h  IRenderStrategy.h  InstancedRenderer.h  NaiveRenderer.h
include/tools/: EngineConfig.h  TextureManager.h  filemanager.h
src/: main.cpp
src/core/: Cube.cpp
src/renderers/: BatchRenderer.cpp  InstancedRenderer.cpp  NaiveRenderer.cpp
src/tools/: EngineConfig.cpp  OpenGLerrorreporting.cpp  TextureManager.cpp  filemanager.cpp
